# canary

./: .gitignore  Dockerfile.dashboard  Dockerfile.dashboard-backend  IMPROVEMENTS.md  README.md  TOOL_IMPROVEMENTS.md  docker-compose.yml  requirements.txt  run_all_models_local.py  run_audit_ttp_on_recent.py  run_auditor_on_last_n.py  run_batch.py  sync-branches.sh  view_tracker.py
auditor/: README.md  __init__.py  activate.py  auditor.py
benign-browsing/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: DEMO_SCRIPT.md  README.md
data/: honeypot-setup.json  runs-plan.json  runs_tracker.json  url-vulnerability-mapping.json  vulnarabilities.json  website-prompts.json
deterministic-websites/: README.md  STRUCTURE.md  registry.json
investigator/: README.md  __init__.py  investigator.py  run.py
mitre-attack/: create_dataset.py  create_mitre_tables.sql  playground.ipynb  pyproject.toml
mitre-attack-viz/: package-lock.json  package.json
mitre-attack/.data/: parent.csv  synthetic_logs.csv  tactics.csv  techniques.csv
mitre-attack/src/mitre_attack/: __init__.py  client.py  models.py  prompt.py  utils.py
mitre-dashboard/: package-lock.json  package.json  pnpm-lock.yaml
multi-website-builder/: Dockerfile  README.md  (+6 more)
red-react-agent/red_react_agent/: README.md  pyproject.toml  report.md
red-react-agent/red_react_agent/src/red_react_agent/: crew.py  main.py
red-react-agent/red_react_agent/src/red_react_agent/config/: agents.yaml  tasks.yaml
red-react-agent/red_react_agent/src/red_react_agent/tools/: __init__.py  security_tools.py
(+371 files in other folders)
