[project]
name = "red_react_agent"
version = "0.1.0"
description = "red-react-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
red_react_agent = "red_react_agent.main:run"
run_crew = "red_react_agent.main:run"
train = "red_react_agent.main:train"
replay = "red_react_agent.main:replay"
test = "red_react_agent.main:test"
run_with_trigger = "red_react_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
